test(jupyter): add GET request

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f87f8094-236b-42ab-b64b-320850e0d0a7",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "47d1baab-29b9-435f-8db6-34f52cc44ebd",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
     "            while True:\n",
     "                try:\n",
     "                    if isinstance(self.callee, Callable):\n",
-    "                        await self.callee(browser_context.pages[0])\n",
+    "                        await self.callee(browser_context)\n",
     "                except ManualLoopInterrupt:\n",
     "                    break\n",
     "                except:\n",
@@ -60,28 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "832e48f0-a655-458b-8f70-40ece33ddba1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending name='Task-19' coro=<WebHandler.main_loop() running at /tmp/nix-shell-28104-0/ipykernel_41293/1186367678.py:5>>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'playwright.async_api._generated.Page'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "global wh\n",
     "wh = WebHandler()\n",
@@ -90,28 +72,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "79c496f3-44ff-409a-96df-8835a9e7f797",
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(page):\n",
+    "async def test(browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
-    "    print(type(page))\n",
+    "    print(type(browser_context))\n",
     "\n",
     "wh.callee = test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "ac67760c-38f4-4200-871f-6197fec75711",
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(page):\n",
+    "async def test(browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
+    "    page = browser_context.pages[0]\n",
     "    await page.goto('https://www.google.com')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcfbeace-7889-4fa3-9bef-b025384302c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    api_req_context = browser_context.request\n",
+    "    response = await api_req_context.get('https://www.pagina12.com.ar/robots.txt')\n",
+    "    print(response)\n",
+    "    text = await response.text()\n",
+    "    print(text)\n",
     "\n",
     "wh.callee = test"
    ]
