test(jupyter): test page.url usage

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -94,7 +94,9 @@
     "async def test(browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
     "    page = browser_context.pages[0]\n",
+    "    print(f'page.url: {page.url}')\n",
     "    await page.goto('https://www.google.com')\n",
+    "    print(f'page.url: {page.url}')\n",
     "\n",
     "wh.callee = test"
    ]
