test(jupyter): show user-agent

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -104,6 +104,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ca810d0-410b-4bc6-bf1a-044595bd58c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    page = browser_context.pages[0]\n",
+    "    user_agent = await page.evaluate(\"\"\"() => navigator.userAgent\"\"\")\n",
+    "    print(f'user_agent: {user_agent}')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bcfbeace-7889-4fa3-9bef-b025384302c1",
    "metadata": {},
    "outputs": [],
