test(jupyter): implement headless check

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -39,7 +39,7 @@
     "        async with async_playwright() as playwright:\n",
     "            global browser_context\n",
     "            chromium = playwright.chromium\n",
-    "            browser_context = await chromium.launch_persistent_context('', headless=False)\n",
+    "            browser_context = await chromium.launch_persistent_context('', headless=True)\n",
     "            browser_context.set_default_navigation_timeout(configs['NavigationDefaultTimeoutSec'] * 1000)\n",
     "            browser_context.set_default_timeout(configs['PageDefaultTimeoutSec'] * 1000)\n",
     "\n",
@@ -73,6 +73,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e83d7c0e-e04c-45b4-a7cf-a02808ac561a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "79c496f3-44ff-409a-96df-8835a9e7f797",
    "metadata": {},
    "outputs": [],
@@ -83,6 +91,14 @@
     "\n",
     "wh.callee = test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e62b0ab2-b38b-4c67-be3f-fa189c9fe062",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -104,6 +120,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "821f12dd-5df5-48d5-8cd3-0164b5a371b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1372e9df-d274-4c3a-8fbc-67663d1f1553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    page = browser_context.pages[0]\n",
+    "    print(f'page.url: {page.url}')\n",
+    "    await page.goto('https://arh.antoinevastel.com/bots/areyouheadless')\n",
+    "    print(f'page.url: {page.url}')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a50fa2e0-6f14-497f-8027-357ba484a8a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    page = browser_context.pages[0]\n",
+    "    msg_div = page.locator('#res')\n",
+    "    msg_contents = await msg_div.inner_text()\n",
+    "    print(f'msg_contents: {msg_contents}')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86a2876a-aff0-4072-a6c3-97e1298adcfd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5ca810d0-410b-4bc6-bf1a-044595bd58c8",
    "metadata": {},
    "outputs": [],
@@ -116,6 +182,14 @@
     "\n",
     "wh.callee = test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba71fcc2-756c-4711-8dc3-ff8f2d65cbf1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
