test(jupyter): implement playwright-stealth usage

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -12,6 +12,7 @@
     "import sys\n",
     "import traceback\n",
     "from playwright.async_api import async_playwright, Playwright, expect\n",
+    "from playwright_stealth import stealth_async\n",
     "from collections.abc import Callable\n",
     "\n",
     "wh = None\n",
@@ -39,14 +40,17 @@
     "        async with async_playwright() as playwright:\n",
     "            global browser_context\n",
     "            chromium = playwright.chromium\n",
-    "            browser_context = await chromium.launch_persistent_context('', headless=True)\n",
+    "            browser_context = await chromium.launch_persistent_context('', headless=False)\n",
     "            browser_context.set_default_navigation_timeout(configs['NavigationDefaultTimeoutSec'] * 1000)\n",
     "            browser_context.set_default_timeout(configs['PageDefaultTimeoutSec'] * 1000)\n",
-    "\n",
+    "            stealth_page = browser_context.pages[0]\n",
+    "            await stealth_async(stealth_page)\n",
+    "            \n",
+    "            print('Launched!')\n",
     "            while True:\n",
     "                try:\n",
     "                    if isinstance(self.callee, Callable):\n",
-    "                        await self.callee(browser_context)\n",
+    "                        await self.callee(stealth_page, browser_context)\n",
     "                except ManualLoopInterrupt:\n",
     "                    break\n",
     "                except:\n",
@@ -85,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(browser_context):\n",
+    "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
     "    print(type(browser_context))\n",
     "\n",
@@ -107,12 +111,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(browser_context):\n",
+    "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
-    "    page = browser_context.pages[0]\n",
-    "    print(f'page.url: {page.url}')\n",
-    "    await page.goto('https://www.google.com')\n",
-    "    print(f'page.url: {page.url}')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "    await stealth_page.goto('https://www.google.com')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
     "\n",
     "wh.callee = test"
    ]
@@ -132,12 +135,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(browser_context):\n",
+    "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
-    "    page = browser_context.pages[0]\n",
-    "    print(f'page.url: {page.url}')\n",
-    "    await page.goto('https://arh.antoinevastel.com/bots/areyouheadless')\n",
-    "    print(f'page.url: {page.url}')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "    await stealth_page.goto('https://arh.antoinevastel.com/bots/areyouheadless')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
     "\n",
     "wh.callee = test"
    ]
@@ -149,10 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(browser_context):\n",
+    "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
-    "    page = browser_context.pages[0]\n",
-    "    msg_div = page.locator('#res')\n",
+    "    msg_div = stealth_page.locator('#res')\n",
     "    msg_contents = await msg_div.inner_text()\n",
     "    print(f'msg_contents: {msg_contents}')\n",
     "\n",
@@ -174,10 +175,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(browser_context):\n",
+    "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
-    "    page = browser_context.pages[0]\n",
-    "    user_agent = await page.evaluate(\"\"\"() => navigator.userAgent\"\"\")\n",
+    "    # stealth_page = await browser_context.new_page()\n",
+    "    # await stealth_async(stealth_page)\n",
+    "    user_agent = await stealth_page.evaluate(\"\"\"() => navigator.userAgent\"\"\")\n",
     "    print(f'user_agent: {user_agent}')\n",
     "\n",
     "wh.callee = test"
@@ -198,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def test(browser_context):\n",
+    "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
     "    api_req_context = browser_context.request\n",
     "    response = await api_req_context.get('https://www.pagina12.com.ar/robots.txt')\n",
