test(jupyter): implement user-agent scraping

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -3,22 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f87f8094-236b-42ab-b64b-320850e0d0a7",
+   "id": "1561b246-e675-4758-9583-5916e5c52349",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
     "import asyncio\n",
     "import sys\n",
+    "import re\n",
+    "import json\n",
     "import traceback\n",
     "from playwright.async_api import async_playwright, Playwright, expect\n",
     "from playwright_stealth import stealth_async\n",
-    "from collections.abc import Callable\n",
-    "\n",
-    "wh = None\n",
+    "from collections.abc import Callable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2d9dbcd-3a76-4d25-96d4-f237f1cc66f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "configs = {\n",
     "    'NavigationDefaultTimeoutSec': 5,\n",
     "    'PageDefaultTimeoutSec': 5,\n",
+    "    'WaitingSecWithinActions': 1,\n",
     "}\n",
     "\n",
     "class ManualLoopInterrupt(Exception):\n",
@@ -69,7 +79,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "global wh\n",
     "wh = WebHandler()\n",
     "asyncio.create_task(wh.main_loop())"
    ]
@@ -154,7 +163,7 @@
     "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
     "    msg_div = stealth_page.locator('#res')\n",
-    "    msg_contents = await msg_div.inner_text()\n",
+    "    msg_contents = await msg_div.text_content()\n",
     "    print(f'msg_contents: {msg_contents}')\n",
     "\n",
     "wh.callee = test"
@@ -164,6 +173,62 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "86a2876a-aff0-4072-a6c3-97e1298adcfd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "267403b5-9294-4638-97ba-c4e5f1df85e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "    await stealth_page.goto('https://www.useragents.me')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5356b5d-e56a-48ea-ae82-e4d197824917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    json_parent_div = stealth_page.locator('#most-common-desktop-useragents-json-csv')\n",
+    "    await json_parent_div.highlight()\n",
+    "    print(f'json_parent_div: {json_parent_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    json_div = json_parent_div.locator('div', has_text='JSON')\n",
+    "    await json_div.highlight()\n",
+    "    print(f'json_div: {json_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    json_textarea = json_div.locator('textarea')\n",
+    "    await json_textarea.highlight()\n",
+    "    print(f'json_textarea: {json_textarea}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    json_text = await json_textarea.input_value()\n",
+    "    parsed_json = json.loads(json_text)\n",
+    "    print(f'json_text: {str(json.dumps(parsed_json, indent=4))}')\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5f27a90-1cbe-437a-8f69-7967f3466f34",
    "metadata": {},
    "outputs": [],
    "source": []
