test(jupyter): set user-agent

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -50,7 +50,9 @@
     "        async with async_playwright() as playwright:\n",
     "            global browser_context\n",
     "            chromium = playwright.chromium\n",
-    "            browser_context = await chromium.launch_persistent_context('', headless=False)\n",
+    "            browser_context = await chromium.launch_persistent_context('',\n",
+    "                                                                       headless=False,\n",
+    "                                                                       user_agent='Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:131.0) Gecko/20100101 Firefox/131.')\n",
     "            browser_context.set_default_navigation_timeout(configs['NavigationDefaultTimeoutSec'] * 1000)\n",
     "            browser_context.set_default_timeout(configs['PageDefaultTimeoutSec'] * 1000)\n",
     "            stealth_page = browser_context.pages[0]\n",
@@ -244,7 +246,7 @@
     "    # raise ManualLoopInterrupt()\n",
     "    # stealth_page = await browser_context.new_page()\n",
     "    # await stealth_async(stealth_page)\n",
-    "    user_agent = await stealth_page.evaluate(\"\"\"() => navigator.userAgent\"\"\")\n",
+    "    user_agent = await stealth_page.evaluate('() => navigator.userAgent')\n",
     "    print(f'user_agent: {user_agent}')\n",
     "\n",
     "wh.callee = test"
