test(jupyter): implement P12 title extraction

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -52,7 +52,8 @@
     "            chromium = playwright.chromium\n",
     "            browser_context = await chromium.launch_persistent_context('',\n",
     "                                                                       headless=False,\n",
-    "                                                                       user_agent='Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:131.0) Gecko/20100101 Firefox/131.')\n",
+    "                                                                       user_agent='Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:131.0) Gecko/20100101 Firefox/131.',\n",
+    "                                                                      )\n",
     "            browser_context.set_default_navigation_timeout(configs['NavigationDefaultTimeoutSec'] * 1000)\n",
     "            browser_context.set_default_timeout(configs['PageDefaultTimeoutSec'] * 1000)\n",
     "            stealth_page = browser_context.pages[0]\n",
@@ -274,6 +275,56 @@
     "    print(response)\n",
     "    text = await response.text()\n",
     "    print(text)\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdb232e9-6558-40d6-aced-941fa4732878",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ef57bef-6472-4516-9236-3e13470db481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "    await stealth_page.goto('https://www.pagina12.com.ar/800250-genealogistas')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95427cb0-625b-4da3-98c3-fd6059bbd949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    header_div = stealth_page.locator('.article-header')\n",
+    "    await header_div.highlight()\n",
+    "    print(f'header_div: {header_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    title_div = header_div.locator('h1')\n",
+    "    await title_div.highlight()\n",
+    "    print(f'title_div: {title_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    title_text = await title_div.inner_text()\n",
+    "    print(f'title_text: {title_text}')\n",
+    "\n",
     "\n",
     "wh.callee = test"
    ]
