test(jupyter): implement P12 date extraction

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -166,7 +166,7 @@
     "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
     "    msg_div = stealth_page.locator('#res')\n",
-    "    msg_contents = await msg_div.text_content()\n",
+    "    msg_contents = await msg_div.inner_text()\n",
     "    print(f'msg_contents: {msg_contents}')\n",
     "\n",
     "wh.callee = test"
@@ -312,7 +312,7 @@
    "source": [
     "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
-    "    header_div = stealth_page.locator('.article-header')\n",
+    "    header_div = stealth_page.locator('div.article-header')\n",
     "    await header_div.highlight()\n",
     "    print(f'header_div: {header_div}')\n",
     "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
@@ -323,6 +323,37 @@
     "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
     "\n",
     "    title_text = await title_div.inner_text()\n",
+    "    print(f'title_text: {title_text}')\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3f34881-3846-4dc5-b9ca-463eedf03c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    desktop_only_div = stealth_page.locator('div.hide-on-mobile')\n",
+    "    await desktop_only_div.highlight()\n",
+    "    print(f'desktop_only_div: {desktop_only_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    article_info_div = desktop_only_div.locator('div.article-info')\n",
+    "    await article_info_div.highlight()\n",
+    "    print(f'article_info_div: {article_info_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    date_time = article_info_div.locator('time')\n",
+    "    await date_time.highlight()\n",
+    "    print(f'date_time: {date_time}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    title_text = await date_time.inner_text()\n",
     "    print(f'title_text: {title_text}')\n",
     "\n",
     "\n",
