test(jupyter): rename a variable

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -353,8 +353,8 @@
     "    print(f'date_time: {date_time}')\n",
     "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
     "\n",
-    "    title_text = await date_time.inner_text()\n",
-    "    print(f'title_text: {title_text}')\n",
+    "    date_text = await date_time.inner_text()\n",
+    "    print(f'date_text: {date_text}')\n",
     "\n",
     "\n",
     "wh.callee = test"
