test(jupyter): implement P12 author extraction

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -363,6 +363,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "09b3dfe8-c2f6-4a1b-b85f-af93b78281da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    header_div = stealth_page.locator('div.article-header')\n",
+    "    await header_div.highlight()\n",
+    "    print(f'header_div: {header_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    author_div = header_div.locator('div.author')\n",
+    "    await author_div.highlight()\n",
+    "    print(f'author_div: {author_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    author_a = author_div.locator('a')\n",
+    "    await author_a.highlight()\n",
+    "    print(f'author_a: {author_a}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    author_text = await author_a.inner_text()\n",
+    "    print(f'author_text: {author_text}')\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6633a9d7-1790-487f-be92-b475c0078dd3",
    "metadata": {},
    "outputs": [],
