test(jupyter): sanitize P12 author extraction

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -297,7 +297,9 @@
     "async def test(stealth_page, browser_context):\n",
     "    # raise ManualLoopInterrupt()\n",
     "    print(f'stealth_page.url: {stealth_page.url}')\n",
-    "    await stealth_page.goto('https://www.pagina12.com.ar/800250-genealogistas')\n",
+    "    # await stealth_page.goto('https://www.pagina12.com.ar/800250-genealogistas')\n",
+    "    # await stealth_page.goto('https://www.pagina12.com.ar/810583-cambio-el-mundo')\n",
+    "    await stealth_page.goto('https://www.pagina12.com.ar/775639-el-futuro-de-la-ia-y-su-impacto-en-el-conocimiento-cambiara-')\n",
     "    print(f'stealth_page.url: {stealth_page.url}')\n",
     "\n",
     "wh.callee = test"
@@ -385,6 +387,8 @@
     "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
     "\n",
     "    author_text = await author_a.inner_text()\n",
+    "    author_text = re.sub(r'^\\s*Por\\s+', '', author_text)\n",
+    "    author_text = author_text.strip()\n",
     "    print(f'author_text: {author_text}')\n",
     "\n",
     "\n",
