test(jupyter): implement P12 image URL extraction

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -398,6 +398,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "81b76069-09de-4219-abc8-876b6f31af9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    main_image_div = stealth_page.locator('div.article-main-image')\n",
+    "    await main_image_div.highlight()\n",
+    "    print(f'main_image_div: {main_image_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    image_img = main_image_div.locator('img')\n",
+    "    await image_img.highlight()\n",
+    "    print(f'image_img: {image_img}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    image_src = await image_img.get_attribute('src')\n",
+    "    print(f'image_src: {image_src}')\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6633a9d7-1790-487f-be92-b475c0078dd3",
    "metadata": {},
    "outputs": [],
