test(jupyter): implement P12 body extraction

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -424,6 +424,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53d04b2c-acfd-458b-bbe4-7b8fedc849ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    main_content_div = stealth_page.locator('div.article-main-content')\n",
+    "    await main_content_div.highlight()\n",
+    "    print(f'main_content_div: {main_content_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    article_text_div = main_content_div.locator('div.article-text')\n",
+    "    await article_text_div.highlight()\n",
+    "    print(f'article_text_div: {article_text_div}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "    \n",
+    "    article_text = await article_text_div.inner_text()\n",
+    "    print(f'date_text: {article_text}')\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6633a9d7-1790-487f-be92-b475c0078dd3",
    "metadata": {},
    "outputs": [],
