test(jupyter): implement P12 search results extraction

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -450,6 +450,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca63e421-fd12-400f-a105-2238634253c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b5cacfd-b0ff-4a8c-a4f1-8908e4068efb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "    await stealth_page.goto('https://www.pagina12.com.ar/buscar?q=genealogistas')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a4652a5-f0e5-46a3-b82d-89887b4d5f65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "\n",
+    "    article_item_header_divs = stealth_page.locator('div.article-item__header')\n",
+    "    await article_item_header_divs.highlight()\n",
+    "    print(f'article_item_header_divs: {article_item_header_divs}')\n",
+    "    await stealth_page.wait_for_timeout(configs['WaitingSecWithinActions'] * 1000)\n",
+    "\n",
+    "    for item in await article_item_header_divs.all():\n",
+    "        url_a = item.locator('a')\n",
+    "        url_href = await url_a.get_attribute('href')\n",
+    "        print(url_href)\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6633a9d7-1790-487f-be92-b475c0078dd3",
    "metadata": {},
    "outputs": [],
