test(jupyter): implement P12 live articles detection

--- a/source/playground.ipynb
+++ b/source/playground.ipynb
@@ -298,8 +298,8 @@
     "    # raise ManualLoopInterrupt()\n",
     "    print(f'stealth_page.url: {stealth_page.url}')\n",
     "    # await stealth_page.goto('https://www.pagina12.com.ar/800250-genealogistas')\n",
-    "    # await stealth_page.goto('https://www.pagina12.com.ar/810583-cambio-el-mundo')\n",
-    "    await stealth_page.goto('https://www.pagina12.com.ar/775639-el-futuro-de-la-ia-y-su-impacto-en-el-conocimiento-cambiara-')\n",
+    "    await stealth_page.goto('https://www.pagina12.com.ar/810583-cambio-el-mundo')\n",
+    "    # await stealth_page.goto('https://www.pagina12.com.ar/775639-el-futuro-de-la-ia-y-su-impacto-en-el-conocimiento-cambiara-')\n",
     "    print(f'stealth_page.url: {stealth_page.url}')\n",
     "\n",
     "wh.callee = test"
@@ -490,6 +490,71 @@
     "        url_a = item.locator('a')\n",
     "        url_href = await url_a.get_attribute('href')\n",
     "        print(url_href)\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "495ea874-33bd-4b10-a4b6-32e6d6ebd3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27a9bf96-bbb8-40d0-a86f-1d88641de298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "    # await stealth_page.goto('https://www.pagina12.com.ar/811262-la-agenda-de-javier-milei-y-las-nuevas-medidas-de-su-gobiern')\n",
+    "    await stealth_page.goto('https://www.pagina12.com.ar/800250-genealogistas')\n",
+    "    print(f'stealth_page.url: {stealth_page.url}')\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "648a870d-f14b-4ca3-87b8-84d8017c0342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    try:\n",
+    "        await expect(stealth_page.locator('article.live-blog-post').first).to_be_attached()\n",
+    "    except AssertionError:\n",
+    "        print('DEtached!')\n",
+    "    else:\n",
+    "        print('Attached!')\n",
+    "\n",
+    "\n",
+    "wh.callee = test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa6f836a-2e1a-4dde-b423-44333d06f310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def test(stealth_page, browser_context):\n",
+    "    # raise ManualLoopInterrupt()\n",
+    "    try:\n",
+    "        await expect(stealth_page.locator('article.live-blog-post').first).to_be_attached(attached=False)\n",
+    "    except AssertionError:\n",
+    "        print('Attached!')\n",
+    "    else:\n",
+    "        print('DEtached!')\n",
     "\n",
     "\n",
     "wh.callee = test"
